# mini-agent

./: CHANGELOG.md  LICENSE  fourmolu.yaml  mini-agent.cabal
app/: Main.hs
app/Bluefin/: Free.hs
app/Control/: LLM.hs  Terminal.hs
app/Control/LLM/: Backends.hs  Interface.hs
app/Network/: Anthropic.hs
