cabal-version:      3.0
name:               mini-agent
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lucas Meier
maintainer:         lucas@cronokirby.com
category:           CK
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable mini-agent
    import:
        warnings

    main-is:
        Main.hs

    other-modules:
        Ourlude

    build-depends:
        base ^>=4.21.0.0

    hs-source-dirs:
        app

    default-extensions:
        -- Because we have our own Prelude, in Ourlude.hs.
        NoImplicitPrelude,
        -- Sensible default, be mindful of this.
        StrictData

    default-language:
        GHC2024
