cabal-version:      3.0
name:               mini-agent
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lucas Meier
maintainer:         lucas@cronokirby.com
category:           CK
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable mini-agent
    import:
        warnings

    main-is:
        Main.hs

    other-modules:
        Network.Anthropic,
        Ourlude

    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.21.0.0,
        bluefin ^>=0.0.15.0,
        bytestring ^>=0.12.2.0,
        http-conduit ^>=2.3.9,
        mtl ^>=2.3.1,
        text ^>=2.1.2,

    hs-source-dirs:
        app

    default-extensions:
        -- Because we have our own Prelude, in Ourlude.hs.
        DuplicateRecordFields,
        NoImplicitPrelude,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        -- Sensible default, be mindful of this.
        StrictData,

    default-language:
        GHC2024
